@@ -7,6 +7,7 @@ trunk
 * Properties table now displays the properties in alphabetical order
 * Fixed properties dialog to also save values that were still being edited
 * Worked around an issue with the open file dialog on GNU classpath
+* Worked around an issue with setting a null cursor on GNU classpath
 
 0.6.1 - July 15th, 2006
 
